[workspace]
exclude = ["firmware/*"]
members = [
  "decoder",
  "decoder/defmt-json-schema",
  "defmt",
  "defmt-log",
  "macros",
  "parser",
  "print",
  "qemu-run",
  "xtask",
]
resolver = "2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
