[workspace]
exclude = ["firmware/*", "defmt-03"]
members = [
  "decoder",
  "decoder/defmt-json-schema",
  "defmt",
  "macros",
  "native-app",
  "parser",
  "print",
  "qemu-run",
  "stdout-logger",
  "xtask",
]
resolver = "2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
