[package]
authors = ["The Knurling-rs developers"]
description = "Decodes defmt log frames"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-decoder"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.1"

[dependencies]
defmt-parser = { path = "../parser", features = ["unstable"], version = "=0.3.0" }
byteorder = "1"
colored = "2"
ryu = "1"

# display
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

# logger
difference = "2"
log = { version = "0.4", features = ["std"] }

# elf2table
anyhow = "1.0.45"
gimli = { version = "0.26", default-features = false, features = ["read", "std"] }
object = { version = "0.27", default-features = false, features = ["read_core", "elf", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# WARNING: API and wire format subject to change.
unstable = []

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = [ "--cfg=docsrs" ]
