[package]
authors = ["The Knurling-rs developers"]
description = "Decodes defmt log frames"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-decoder"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.3"

[dependencies]
defmt-parser = { path = "../parser", features = [
    "unstable",
], version = "=0.3.1" }
byteorder = "1"
colored = "2"
ryu = "1"

# display
time = { version = "0.3", default-features = false, features = [
    "alloc",
    "formatting",
    "large-dates",
    "macros",
] }

# logger
dissimilar = "1"
log = { version = "0.4", features = ["std"] }
defmt-json-schema = { version = "0.1", path = "./defmt-json-schema" }

# elf2table
anyhow = "1.0.65"
gimli = { version = "0.26", default-features = false, features = [
    "read",
    "std",
] }
object = { version = "0.29", default-features = false, features = [
    "read_core",
    "elf",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }

[features]
# WARNING: API and wire format subject to change.
unstable = []

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = ["--cfg=docsrs"]
