[package]
authors = ["The Knurling-rs developers"]
description = "Decodes defmt log frames"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-decoder"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "1.0.0-alpha"

[dependencies]
byteorder = "1"
colored = "2"
defmt-parser = { version = "=1.0.0-alpha", path = "../parser" }
ryu = "1"
nom = "7"

# display
time = { version = "0.3", default-features = false, features = [
    "alloc",
    "formatting",
    "large-dates",
    "macros",
] }

# logger
dissimilar = "1"
log = { version = "0.4", features = ["std"] }
defmt-json-schema = { version = "0.1", path = "./defmt-json-schema" }

# elf2table
anyhow = "1.0.65"
gimli = { version = "0.29", default-features = false, features = [
    "read",
    "std",
] }
object = { version = "0.35", default-features = false, features = [
    "read_core",
    "elf",
    "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
regex = "1"
alterable_logger = "1"

[features]
# DEPRECATED: noop, will be removed in 1.0
unstable = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg=docsrs"]
