[package]
authors = ["The Knurling-rs developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "elf2table"
version = "0.1.0"

[dependencies]
anyhow = "1.0.32"
decoder = { path = "../decoder" }
gimli = "0.22.0"

[dependencies.object]
version = "0.21.0"
default-features = false
features = ["read_core", "elf", "std"]
