[package]
authors = ["The Knurling-rs developers"]
edition = "2018"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-elf2table"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.1.0"

[dependencies]
anyhow = "1.0.32"
defmt-decoder = { path = "../decoder", features = ["unstable"], version = "0.1.0" }
gimli = "0.22.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.object]
version = "0.21.0"
default-features = false
features = ["read_core", "elf", "std"]

[features]
unstable = []

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = [ "--cfg=docsrs" ]
