[package]
authors = ["The Knurling-rs developers"]
description = "defmt macros"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-macros"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.4"

[lib]
proc-macro = true

[features]
# WARNING: for internal use only, not covered by semver guarantees
unstable-test = []

[dependencies]
defmt-parser = { version = "=0.3.2", path = "../parser", features = ["unstable"] }
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
# we require at least 1.0.56; see https://github.com/knurling-rs/defmt/pull/684
syn = { version = "1.0.101", features = ["full"] }

[dev-dependencies]
maplit = "1"
pretty_assertions = "1"
rstest = { version = "0.17", default-features = false }
