[package]
authors = ["The Knurling-rs developers"]
description = "defmt macros"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-macros"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.5.0"

[lib]
proc-macro = true

[features]
# WARNING: for internal use only, not covered by semver guarantees
unstable-test = []

[dependencies]
defmt-parser = { version = "=0.5.0", path = "../parser", features = ["unstable"] }
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
maplit = "1"
pretty_assertions = "1"
rstest = { version = "0.22", default-features = false }
