[package]
authors = ["The Knurling-rs developers"]
description = "Parsing library for defmt format strings"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-parser"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.4"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
rstest = { version = "0.19", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg=docsrs" ]
