[package]
authors = ["The Knurling-rs developers"]
categories = ["embedded"]
description = "A tool that decodes defmt logs and prints them to the console"
edition = "2021"
keywords = ["knurling", "logging", "formatting"]
license = "MIT OR Apache-2.0"
name = "defmt-print"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "1.0.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
defmt-decoder = { version = "=1.0.0-alpha", path = "../decoder" }
log = "0.4"
notify = "7"
tokio = { version = "1.38", features = ["full"] }
