[package]
authors = ["The Knurling-rs developers"]
categories = ["embedded"]
description = "Runs qemu-system-arm but decodes defmt data sent to semihosting"
edition = "2021"
keywords = ["knurling", "logging", "formatting", "qemu"]
license = "MIT OR Apache-2.0"
name = "qemu-run"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
rust-version = "1.83"
version = "0.1.1"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive", "env"] }
defmt-decoder = { version = "1", path = "../decoder" }
log = "0.4.28"
