[package]
name = "xtask"
authors = ["The Knurling-rs developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.0"
once_cell = "1.7"
similar = "1.3"
structopt = "0.3"
tempfile = "3.2.0"
