[package]
name = "xtask"
authors = ["The Knurling-rs developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
colored = "2"
once_cell = "1.8"
similar = "2.1"
structopt = "0.3"
tempfile = "3.2"
