[package]
name = "xtask"
authors = ["The Knurling-rs developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
similar = "2.2"
tempfile = "3.3"
