[package]
authors = ["The Knurling-rs developers"]
description = "defmt JSON schema"
edition = "2021"
keywords = ["knurling", "defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-json-schema"
readme = "../../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.1.0"

[dependencies]
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
