[package]
authors = ["The Knurling-rs developers"]
categories = ["embedded", "no-std"]
description = "Transmit defmt log messages over the RTT (Real-Time Transfer) protocol"
edition = "2018"
keywords = ["knurling", "defmt", "defmt-transport"]
license = "MIT OR Apache-2.0"
name = "defmt-rtt"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.2.0"

[dependencies]
cortex-m = "0.6.3"
defmt = { path = "../..", version = "0.2.0" }
