[package]
authors = ["The Knurling-rs developers"]
categories = ["embedded", "no-std"]
description = "Transmit defmt log messages over the Cortex-M Semihosting protocol"
edition = "2021"
keywords = ["knurling", "defmt", "defmt-transport"]
license = "MIT OR Apache-2.0"
name = "defmt-semihosting"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.1.0"

[dependencies]
defmt = { version = "0.3", path = "../../defmt" }
cortex-m = "0.7"
cortex-m-semihosting = "0.5"
critical-section = "1.2"

[features]
critical-section-single-core = ["cortex-m/critical-section-single-core"]
