[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52"
version = "0.1.0"

[dependencies]
binfmt = { path = "../.." }
binfmt-rtt = { path = "../binfmt-rtt" }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
nrf52840-hal = "0.10.0"
panic-halt = "0.2.0"

[features]
binfmt-default = []
binfmt-trace = []
binfmt-debug = []
binfmt-info = []
binfmt-warn = []
binfmt-error = []
default = ["binfmt-default"]

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

# faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[workspace]
