[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52"
version = "0.1.0"
publish = false

[dependencies]
binfmt = { path = "../.." }
binfmt-rtt = { path = "../binfmt-rtt" }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
nrf52840-hal = "0.10.0"
panic-probe = { path = "../panic-probe" }

[features]
binfmt-default = []
binfmt-trace = []
binfmt-debug = []
binfmt-info = []
binfmt-warn = []
binfmt-error = []
default = ["binfmt-default"]

[[bin]]
name = "log"
test = false

[[bin]]
name = "panic"
test = false

[[bin]]
name = "exception"
test = false

[[bin]]
name = "hello"
test = false
