[package]
authors = ["The Knurling-rs developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "nrf52"
publish = false
readme = "README.md"
version = "0.1.0"

[dependencies]
defmt = { path = "../.." }
defmt-rtt = { path = "../defmt-rtt" }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
nrf52840-hal = "0.10.0"
panic-probe = { git = "https://github.com/knurling-rs/probe-run", branch = "main" }

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
default = ["defmt-default"]

[[bin]]
name = "log"
test = false

[[bin]]
name = "panic"
test = false

[[bin]]
name = "exception"
test = false

[[bin]]
name = "hello"
test = false
