[package]
authors = ["The Knurling Authors"]
categories = ["embedded", "no-std"]
description = "Panic handler that exits `probe-run` with an error code"
edition = "2018"
keywords = ["knurling", "panic-impl", "defmt", "probe-run"]
license = "MIT OR Apache-2.0"
name = "panic-probe"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
defmt = { version = "0.2.0", path = "../..", optional = true }
rtt-target = { version = "0.3.1", optional = true }


[features]
# Print the panic message using `rtt-target`.
print-rtt = ["rtt-target"]
# Print the panic message using `defmt`.
print-defmt = ["defmt", "defmt-error"]

defmt-error = [] # internal feature, do not use

[package.metadata.docs.rs]
default-target = "thumbv7m-none-eabi"
