[package]
authors = ["The Knurling Authors"]
categories = ["embedded", "no-std"]
description = "Panic handler that exits `probe-run` with an error code"
edition = "2021"
keywords = ["knurling", "panic-impl", "defmt", "probe-run"]
license = "MIT OR Apache-2.0"
name = "panic-probe"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "1.0.0-alpha"

[dependencies]
cortex-m = "0.7"
defmt = { version = "1.0.0-alpha", path = "../../defmt", optional = true }
rtt-target = { version = "0.5", optional = true }


[features]
# Print the panic message using `rtt-target`.
print-rtt = ["rtt-target"]
# Print the panic message using `defmt`.
print-defmt = ["defmt", "defmt-error"]

defmt-error = [] # internal feature, do not use

[package.metadata.docs.rs]
default-target = "thumbv7m-none-eabi"
