[package]
authors = ["The Knurling-rs developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "firmware"
publish = false
version = "0.1.0"

[[test]]
name = "defmt-test"
harness = false

[dependencies]
defmt = { path = "../../defmt" }
defmt-semihosting = { path = "../defmt-semihosting" }
defmt-test = { path = "../defmt-test" }
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.3.7"
alloc-cortex-m = { version = "0.4.1", optional = true }
linked_list_allocator = { version = "0.9.0", optional = true }

[features]
alloc = ["defmt/alloc", "alloc-cortex-m", "linked_list_allocator/const_mut_refs"]

[[bin]]
name = "alloc"
required-features = ["alloc"]
