[package]
authors = ["The Knurling-rs developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "firmware"
publish = false
version = "0.1.0"

[[test]]
name = "defmt-test"
harness = false

[dependencies]
defmt = { path = "../../defmt" }
defmt-semihosting = { path = "../defmt-semihosting" }
defmt-test = { path = "../defmt-test" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
alloc-cortex-m = { version = "0.4", optional = true }
linked_list_allocator = { version = "0.10.2", optional = true }

[features]
alloc = ["defmt/alloc", "alloc-cortex-m", "linked_list_allocator/const_mut_refs"]
ip_in_core = ["defmt/ip_in_core"]

[[bin]]
name = "alloc"
required-features = ["alloc"]

[[bin]]
name = "net"
required-features = ["ip_in_core"]
