[package]
authors = ["The Knurling-rs developers"]
description = "defmt-test macros"
edition = "2018"
keywords = ["knurling", "defmt", "testing"]
license = "MIT OR Apache-2.0"
name = "defmt-test-macros"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.71", features = ["extra-traits", "full"] }
