[package]
authors = ["The Knurling-rs developers"]
description = "defmt-test macros"
edition = "2021"
keywords = ["knurling", "defmt", "testing"]
license = "MIT OR Apache-2.0"
name = "defmt-test-macros"
readme = "../README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.72", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = "1"
